# panel-packing-engine

./: README.md  pyproject.toml
examples/: basic_usage.py
src/panel_packing/: __init__.py  api.py  collision.py  dense_solver.py  geometry.py  solvers.py
tests/: test_advanced.py  test_basic.py
